--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongodb-core": "~1.0",
+    "mongoose": "^4.4.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-     "mongodb-core": "~1.0"
+    "serve-favicon": "~2.3.0"
   }
 }
